[package]
name = "ablema_graphql"
version = "0.1.0"
authors = ["djedou <djedouarnaud.aman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["full"] }
async-graphql = { version = "2.5.1", features = ["dataloader", "multipart", "unblock"] }
serde_json = "1.0.59"
url = "2.2.0"
